welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:9: error: not found: type nbrcookies
    ecritMessage(msg:nbrcookies)
                     ^Poucet:9: error: not found: value msg
    ecritMessage(msg:nbrcookies)
                 ^